# gshare-manager

./: .env.example  .gitignore  Dockerfile  README.md  app.py  benchmark_log_emit.py  benchmark_scan.py  build.func  config.py  config.yaml  config.yaml.template  docker-README.md  docker-compose.yml  docker-entrypoint.sh  folder_monitor.py  gshare_manager.py  lxc_install.sh  lxc_update.sh  main.py  models.py  profile_scan.py  proxmoxLXC.sh  proxmox_api.py  pyproject.toml  requirements.txt  smb_manager.py  test_config.py  test_folder_monitor_scan.py  test_security_fix.py  test_smb_manager.py  test_transcoder.py  update.sh  utils.py  web_server.py
.cursor/rules/: custom-rule.mdc
.jules/: bolt.md
app/: config.py  gshare_manager.py  main.py  mqtt_manager.py  proxmox_api.py  smb_manager.py  transcoder.py  web_server copy.py  web_server.py
app/static/: scripts.js
app/static/css/: style.css
app/templates/: index.html  landing.html  settings.html  setup_complete.html
docs/: gshare-nas-vm-relationship.md
nas-event-relay/: Dockerfile  README.md  docker-compose.yml  watch-and-notify.sh
static/: scripts.js
templates/: index.html  scripts.js  settings.html
tests/: test_smb_manager.py
