[tool.poetry]
name = "gshare-manager"
version = "2.0.0"
description = "GShare Manager"
authors = ["wooooooooooook <wooooooooooook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.0.1"
requests = "2.26.0"
pytz = "2021.1"
werkzeug = "2.0.1"
jinja2 = "3.0.1"
itsdangerous = "2.0.1"
click = "8.0.1"
idna = "3.2"
certifi = "2021.5.30"
chardet = "4.0.0"
markupsafe = "2.0.1"
pyyaml = "6.0"
flask-socketio = "5.3.6"
python-socketio = "5.10.0"
python-engineio = "4.8.0"
paho-mqtt = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
