[tool.poetry]
name = "gshare-manager"
version = "2.0.3"
description = "GShare Manager"
package-mode = false
authors = ["wooooooooooook <wooooooooooook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
requests = "^2.32.0"
pytz = "^2024.1"
werkzeug = "^3.1.0"
jinja2 = "^3.1.0"
itsdangerous = "^2.2.0"
click = "^8.1.0"
idna = "^3.7"
certifi = "^2024.0"
chardet = "^5.2.0"
markupsafe = "^3.0.0"
pyyaml = "^6.0.2"
flask-socketio = "^5.5.0"
python-socketio = "^5.12.0"
python-engineio = "^4.11.0"
paho-mqtt = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
